--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
   <body>
     <h1>APIs Playground</h1>
     <p class="description">
-      This application offers several API services with straightforward examples for testing communication. Use the provided requests to quickly try out and verify each API endpoint.
+      This application offers several API services with straightforward examples for testing communication. Use the provided requests to quickly try out and verify each API endpoint.    
+    <br><br>
+    Useful for bugbounting and learning about different APIs and possible impacts associated with the compromised API keys.
     </p>
     <br>
     <p class="credits">
       With love, <b>Xen00rw ♥</b>
     </p>
     <div class="api-tags" id="api-tags"></div>
+    <img src="assets/images/skull.png" alt="skull" class="corner-logo">
     <div id="api-container"></div>
 
     <script type="text/javascript" src="assets/js/app.js"></script>
