--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <p class="credits">
       With love, <b>Xen00rw ♥</b>
     </p>
+    <p class="last-updated">
+      Last updated: <b>18/July/25</b>
+    </p>
     <div class="api-tags" id="api-tags"></div>
     <img src="assets/images/skull.png" alt="skull" class="corner-logo">
     <div id="api-container"></div>
