--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="APIs Playground" />
+    <meta property="og:description" content="A page with several API services and examples for testing communication. Use the provided requests to quickly try out and verify API endpoints." />
+    <meta property="og:image" content="https://apis-playground.xen00rw.me/assets/images/skull.png">
+    <meta property="og:type" content="website">
     <title>APIs Playground</title>
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
